@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-01T01:00:19Z",
-  "count_outdated" : 250,
-  "uniques_outdated" : 184,
+  "timestamp" : "2025-04-06T00:57:08Z",
+  "count_outdated" : 251,
+  "uniques_outdated" : 185,
   "count" : 253,
   "uniques" : 187,
   "clones" : [
-    {
-      "timestamp": "2025-03-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-30T00:00:00Z",
       "count": 2,
